# clio-py

./: .gitignore  README.md  _clio.py  _main.py  clio.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
clio/: __init__.py  __version__.py  annotate.py  client.py  fetch.py  pull.py  push.py
